<resources>
    <string name="app_name">To Do Application</string>
    <string name="details_place_holder">place holder</string>
    <string name="details_update_button">Update button</string>
    <string name="home_new_task">New task</string>
    <string name="input_task_title">Task Title</string>
    <string name="input_task_description">Task Description</string>
    <string name="login_enter_email">Enter email</string>
    <string name="login_enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="login_register">Don\'t have an account? <u>Register here</u></string>
    <string name="register_enter_email">Enter email</string>
    <string name="registration">Registration</string>
    <string name="registration_login">Have an account? <u>Login here</u></string>
    <string name="place_holder">hello</string>
    <string name="this_is_a_save_button">this is a save button</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="log_out">Log Out</string>
    <string name="search_task_button">this is a search task button</string>
    <string name="sort_task_button">this is a sort task button</string>
    <string name="log_out_button">this is a log out button</string>
    <string name="delete">Delete</string>
    <string name="delete_task_button">this is a delete task button</string>
    <string name="sign_in_icon">Sign in icon</string>
    <string name="sign_in">Sign in</string>
    <string name="Login_des">Login into To Do Application to enjoy your own personalize to do list.</string>
    <string name="registration_desc">Registration now for a personalize experience with To Do Application</string>
    <string name="login_logout">Login/Logout</string>
    <string name="add_new_task_to_your_list">Add new task to your list</string>
    <string name="edit_delete_task">Edit/Delete task</string>
    <string name="search_and_filter">Search and filter</string>
    <string name="what_s_new">What\'s new</string>
    <string name="all_features">All features that you can do with your To Do Application</string>
</resources>